--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>IWP Project - Sign Up</title>
+  <title>Sign Up</title>
   
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
@@ -89,6 +89,7 @@
 
     /* Button hover effect */
     .btn:hover {
+      color: white;
       background-color: #01579b;
       transform: scale(1.05);
     }
@@ -116,7 +117,7 @@
 <body>
   <div class="form-container">
     <h2>Sign Up</h2>
-    <form action="/signup.html" method="POST">
+    <form action="{% url 'signup' %}" method="POST">
       {% csrf_token %}
       <div class="mb-3">
         <label for="username">Username:</label>
@@ -137,7 +138,8 @@
       <button type="submit" class="btn">Sign Up</button>
     </form>
     <div class="footer">
-      <p>Already have an account? <a href="login.html">Login here</a></p>
+      <p>Already have an account? <a href="/login">Login here</a></p>
+      <p>Changed your mind? <a href="/">Continue as guest</a></p>
     </div>
   </div>
 
