--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -23,14 +23,14 @@
     <header>
         <div class="container">
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about/">About</a></li>
                 <!-- if not logged in -->
                 {% if user.is_authenticated %}
-                    <li class="login"><a href="logout/">Log out</a></li>
-                    <li class="login"><a href="account/">My account</a></li>
+                    <li class="login"><a href="/logout/">Log out</a></li>
+                    <li class="login"><a href="/profile/">{{ user.username }}</a></li>
                 {% else %}
-                    <li class="login"><a href="login/">Log in</a></li>
+                    <li class="login"><a href="/login/">Log in</a></li>
                 {% endif %}
 
                 <!-- if logged in then show account button -->
