--- a/templates/profile.html
+++ b/templates/profile.html
@@ -26,7 +26,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/">About</a></li>
                 <li class="login"><a href="/logout/">Log out</a></li>
-                <li class="login"><a href="/account/">My account</a></li>
+                <li class="login"><a href="/profile/">{{ user.username }}</a></li>
             </ul>
         </div>
     </header>
